<resources>
    <string name="app_name">MyVoiceApp</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="invalid_input_data">Invalid input data</string>
    <string name="login">Log in</string>
    <string name="create_account">Create a new account</string>
    <string name="title_activity_accueil">AccueilActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_classes">My Classes</string>
    <string name="username">Username</string>
    <string name="subject">Subject</string>
    <string name="institution">Institution</string>
    <string name="data_entered_error">Error in the data entered</string>
    <string name="email_or_password_wrong">Wront combination of email and password</string>
    <string name="logout">Log out</string>
    <string name="empty" />
    <string name="my_account">My Account</string>
    <string name="action_delete_account">Delete account</string>
    <string name="my_languages">My Languages</string>
</resources>
