<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateAccountActivity">

    <TextView
        android:id="@+id/activity_create_account_tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/name"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/activity_create_account_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_create_account_tv_name"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/name" />

    <TextView
        android:id="@+id/activity_create_account_tv_last"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_create_account_et_name"
        android:layout_margin="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/last_name"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/activity_create_account_et_last"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_create_account_tv_last"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:hint="@string/last_name" />


    <TextView
        android:id="@+id/activity_create_account_tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_create_account_et_last"
        android:layout_margin="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/email"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/activity_create_account_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_create_account_tv_email"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/activity_create_account_tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_create_account_et_email"
        android:layout_margin="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/password"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/activity_create_account_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_create_account_tv_password"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/activity_create_account_et_password"
        android:layout_marginEnd="29dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_add" />
</RelativeLayout>